# course_work_db

./: .gitignore  README.md  main.py  pyproject.toml
src/: DBManager.py  config.py  database.ini  queries.sql  utils.py
