[tool.poetry]
name = "course-work-db"
version = "0.1.0"
description = ""
authors = ["ekaterinarogova <ekatersergeev@gmail.com>"]
readme = "README.md"
packages = [{include = "course_work_db"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
